--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "HOST=0.0.0.0 PORT=3000 nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "storybook": "nuxt storybook -p 6006",
+    "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
     "core-js": "^3.25.3",
@@ -15,5 +17,11 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/storybook": "^4.3.2",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "node-sass": "6.0",
+    "postcss": "8",
+    "sass-loader": "10.2.0"
+  }
 }
