--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "node-sass": "6.0",
+    "normalize.css": "^8.0.1",
     "postcss": "8",
     "sass-loader": "10.2.0"
   }
